...
        collectionView.collectionViewLayout = layout
        collectionView.dataSource = self
        collectionView.delegate = self
        collectionView.isSelectable = true
        collectionView.allowsMultipleSelection = true
        collectionView.register(ResultGridItem.self, forItemWithIdentifier: ResultGridItem.identifier)
        collectionView.setAccessibilityIdentifier("ResultsGrid")
        collectionView.menuProvider = { [weak self] event in
            self?.menu(for: event)
        }
        collectionView.doubleClickHandler = { [weak self] in
            self?.doubleClicked()
        }
...
