...
        super.init(frame: .zero)

        setContentHuggingPriority(.required, for: .vertical)
        setContentCompressionResistancePriority(.required, for: .vertical)
        fieldPopup.setAccessibilityIdentifier("SearchRuleFieldPopup")
        operatorPopup.setAccessibilityIdentifier("SearchRuleOperatorPopup")
        valueField.setAccessibilityIdentifier("SearchRuleValueField")
        toggleValueControl.setAccessibilityIdentifier("SearchRuleToggleValue")
        addButton.setAccessibilityIdentifier("SearchRuleAddButton")
        removeButton.setAccessibilityIdentifier("SearchRuleRemoveButton")
        choiceValuePopup.setAccessibilityIdentifier("SearchRuleChoiceValuePopup")
        relativeAmountField.setAccessibilityIdentifier("SearchRuleRelativeAmountField")
        relativeUnitPopup.setAccessibilityIdentifier("SearchRuleRelativeUnitPopup")

        configureTextField(valueField, defaultValue: "")
...
