...

        scrollView.drawsBackground = false
        scrollView.borderType = .noBorder
        scrollView.hasHorizontalScroller = false
        scrollView.hasVerticalScroller = false
        scrollView.autohidesScrollers = true
        scrollView.setAccessibilityIdentifier("SearchRulesScrollView")
        scrollView.setAccessibilityLabel("SearchRulesScrollView")
        scrollView.documentView = contentView
        contentView.setContentHuggingPriority(.required, for: .vertical)
        contentView.setContentCompressionResistancePriority(.required, for: .vertical)

        addSubview(scrollView)
...
